# sailfishos-chum-gui

.github/workflows/: ci-on-tags.yml
icons/: CMakeLists.txt
icons/theme/: CMakeLists.txt
qml/components/: AppSummary.qml  LabelMarkdown.qml  PackagesListItem.qml  TextFieldDesc.qml
qml/pages/: PackagePage.qml  PackagesListPage.qml  RepoSelectDialog.qml  SettingsPage.qml
rpm/: sailfishos-chum-gui.spec
src/: CMakeLists.txt  chum.cpp  chum.h  chumpackage.cpp  chumpackage.h  chumpackagesmodel.cpp  projectcodeberg.cpp  projectforgejo.cpp  projectforgejo.h  projectgithub.cpp  projectgitlab.cpp
translations/: sailfishos-chum-gui.ts
